--- a/tarifas/templates/todas_las_tarifas.html
+++ b/tarifas/templates/todas_las_tarifas.html
@@ -8,22 +8,28 @@
         <th scope="col">#</th>
         <th>Marca</th>
         <th>Modelo</th>
+        <th>Antiguedad</th>
         <th>Categoria</th>
         <th>Frecuencia</th>
         <th>Precio</th>
       </tr>
     </thead>
     <tbody>
+      {% if error %}
+      <p>{{error}}</p>
+      {% else %}
         {% for v in vehiculos %}
         <tr>
             <th scope="row">{{forloop.counter}}</th>
             <td>{{v.marca}}</td>
             <td>{{v.modelo}}</td>
+            <td>{{v.antiguedad}}</td>
             <td>{{v.categoria}}</td>
             <td>{{v.frecuencia}}</td>
             <td>${{v.precio}}</td>
         </tr>
         {% endfor %}
+      {% endif %}
     </tbody>
 </table>
 
