--- a/tarifas/templates/ver_tarifa.html
+++ b/tarifas/templates/ver_tarifa.html
@@ -9,6 +9,7 @@
       <tr>
         <th>Marca</th>
         <th>Modelo</th>
+        <th>Antiguedad</th>
         <th>Categoria</th>
         <th>Frecuencia</th>
         <th>Precio</th>
@@ -18,6 +19,7 @@
         <tr>
             <td>{{vehiculo.marca}}</td>
             <td>{{vehiculo.modelo}}</td>
+            <td>{{vehiculo.antiguedad}}</td>
             <td>{{tarifa.categoria}}</td>
             <td>{{tarifa.frecuencia}}</td>
             <td>${{tarifa.precio}}</td>
