--- a/tarifas/templates/consultar_tarifa.html
+++ b/tarifas/templates/consultar_tarifa.html
@@ -28,7 +28,7 @@
         <option value="">Seleccione un modelo</option>
     </select>
     </div>
-    <button type="submit" class="btn btn-primary" value="Consultar">Buscar</button>
+    <button type="submit" class="btn btn-secondary" value="Consultar">Buscar</button>
   </form>
 
 
