--- a/tarifas/templates/index.html
+++ b/tarifas/templates/index.html
@@ -5,13 +5,13 @@
 <div id="carouselExample" class="carousel slide">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="{% static 'auto6.jpg' %}" class="d-block w-100" alt="...">
+      <img src="https://media.sitioandino.com.ar/p/a6a98acff14e4c441256ed21d6783750/adjuntos/335/imagenes/000/214/0000214758/790x0/smart/rto-tallerjpg.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="{% static 'auto7.jpg' %}" class="d-block w-100" alt="...">
+      <img src="https://lagacetadigital.com.ar/wp-content/uploads/2024/02/RTO-oblea.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="{% static 'auto8.jpg' %}" class="d-block w-100" alt="...">
+      <img src="https://cuyomotor.com.ar/wp-content/uploads/2021/06/RTO-Mendoza-9.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -22,33 +22,6 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
-</div>
-    
-<div id="carouselExampleIndicators" class="carousel slide">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item">
-        <img src="{% static 'auto6.jpg' %}" class="d-block w-100" alt="Auto 2">
-      </div>
-      <div class="carousel-item">
-        <img src="{% static 'auto7.jpg' %}" class="d-block w-100" alt="Auto 3">
-      </div>
-      <div class="carousel-item">
-        <img src="{% static 'auto8.jpg' %}" class="d-block w-100" alt="Auto 4">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
 </div>
 
 {% endblock %}
